# chain-wallet-libs

./: CHANGELOG.md  LICENSE-APACHE  README.md
bindings/wallet-c/: Cargo.toml  cbindgen.toml  check_header.sh  regen_header.sh  tags.AGSi5L  wallet.h
bindings/wallet-c/src/: lib.rs  settings.rs  time.rs
bindings/wallet-cordova/: .gitignore  README.md  package.json  plugin.xml
bindings/wallet-cordova/scripts/: build_ios.py  build_jni.py  copy_jni_definitions.py
bindings/wallet-cordova/src/android/: WalletPlugin.java  WalletPlugin.kt
bindings/wallet-cordova/src/ios/: WalletPlugin.m
bindings/wallet-cordova/www/: wallet.js
bindings/wallet-core/: Cargo.toml
bindings/wallet-core/src/: wallet.rs
bindings/wallet-core/src/c/: mod.rs
bindings/wallet-js/: Cargo.toml  README.md
bindings/wallet-js/src/: lib.rs
bindings/wallet-uniffi/: Cargo.toml  uniffi.toml
bindings/wallet-uniffi/src/: lib.udl
bip39/: LICENSE-MIT
chain-path-derivation/src/: bip44.rs
doc/: CRYPTO.md  getting_started.md
hdkeygen/: Cargo.toml  LICENSE-APACHE
hdkeygen/src/: bip44.rs
hdkeygen/src/rindex/: hdpayload.rs
test-vectors/: genesis.yaml
wallet/: Cargo.toml
wallet/src/: blockchain.rs
wallet/src/recovering/: mod.rs  paperwallet.rs
wallet/src/scheme/: bip44.rs  rindex.rs
