[package]
name = "wallet-uniffi"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = [ "cdylib" ]
name = "uniffi_quibitous_wallet"

[dependencies]
uniffi = "0.16.0"
uniffi_macros = "0.16.0"
wallet-core = { path = "../wallet-core" }
wallet = {path = "../../wallet"}
symmetric-cipher = {path = "../../symmetric-cipher"}
chain-vote = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main" }
chain-addr = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main" }
chain-impl-mockchain = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main" }
chain-crypto = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main" }
chain-time = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main" }
chain-ser = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main" }
thiserror = {version = "1.0", default-features = false}

[build-dependencies]
uniffi_build = "0.16.0"

[features]
builtin-bindgen = ["uniffi_build/builtin-bindgen"]
